<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_liner">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/false_btn_text"
            android:id="@+id/false_btn"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/new_friend_text"
            android:id="@+id/new_text"
            android:textSize="@dimen/abc_text_size_large_material"
            android:gravity="center"
            android:layout_weight="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ok_btn_text"
            android:id="@+id/ok_btn"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginRight="5dp"
            android:background="#ffc1bfff" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/edit_layout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table01"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table02"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textblank"
                android:layout_column="7"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_name"
                android:layout_column="11"
                android:hint="@string/name_text"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table04"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table03"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_column="7"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/friend_icon"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_compus"
                android:layout_column="11"
                android:hint="@string/compus_text"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table05">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textblank02"
                android:layout_column="7"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_work"
                android:layout_column="11"
                android:hint="@string/work_text"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table06">
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_text"
                android:id="@+id/text_phone"
                android:layout_column="7"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/edit_phone"
                android:layout_column="11"
                android:hint="@string/num_text"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table07"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:id="@+id/email_text"
                android:layout_column="7"
                android:textSize="@dimen/abc_text_size_medium_material"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edit_email"
                android:layout_column="11"
                android:hint="@string/em_text"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/table08">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/morebtn_text"
                android:id="@+id/button_more"
                android:layout_column="7"
                android:layout_weight="0.5"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
